--- a/build.gradle
+++ b/build.gradle
@@ -4,17 +4,15 @@
  * It is extraordinarily rare that you will ever need to edit this file.
  */
 buildscript {
-    ext.ftc_version = '3.4'
+    ext.ftc_version = '3.5'
 
     repositories {
-        jcenter()
         google()
+        jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        //classpath 'com.android.tools.build:gradle:3.0.0-beta7' //Required for modification of Common-Code
+        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
     }
 }
-
-
