Fixed ProGuard and removed Multidex

--- a/build.common.gradle
+++ b/build.common.gradle
@@ -20,9 +20,7 @@ import java.util.regex.Pattern
 apply plugin: 'com.android.application'
 
 android {
-
-    compileSdkVersion 22
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 26
 
     signingConfigs {
         debug {
@@ -36,9 +34,7 @@ android {
     defaultConfig {
         applicationId 'com.qualcomm.ftcrobotcontroller'
         minSdkVersion 19
-        targetSdkVersion 22
-
-        multiDexEnabled true
+        targetSdkVersion 19
 
         /**
          * We keep the versionCode and versionName of robot controller applications in sync with
@@ -77,12 +73,18 @@ android {
             ndk {
                 abiFilters "armeabi-v7a"
             }
+
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
             debuggable true
             ndk {
                 abiFilters "armeabi-v7a"
             }
+
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 
