--- a/TeamCode/build.release.gradle
+++ b/TeamCode/build.release.gradle
@@ -1,13 +1,18 @@
 dependencies {
-    compile project(':FtcRobotController')
+    implementation project(':FtcRobotController')
 
-    compile "org.first.ftc:robotcore:$ftc_version"
-    compile "org.first.ftc:hardware:$ftc_version"
-    compile "org.first.ftc:ftc-common:$ftc_version"
-    compile "org.first.ftc:analytics:$ftc_version"
-    compile "org.first.ftc:wireless-p2p:$ftc_version"
+    implementation "org.first.ftc:robotcore:$ftc_version"
+    implementation "org.first.ftc:hardware:$ftc_version"
+    implementation "org.first.ftc:ftc-common:$ftc_version"
+    implementation "org.first.ftc:analytics:$ftc_version"
+    implementation "org.first.ftc:wireless-p2p:$ftc_version"
 
-    compile "com.github.Pattonville-Robotics:Common-Code:$ftc_version.1.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    implementation "com.github.Pattonville-Robotics:Common-Code:$ftc_version.2"
+
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-math3
+    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 
     //compile (name: 'RobotCore-release', ext: 'aar')
     //compile (name: 'Hardware-release', ext: 'aar')
