Added placeGlyph function to AutoMethods

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ include ':FtcRobotController'
 include ':TeamCode'
 
 //noinspection GroovyConstantIfStatement
-if (true) {
+if (false) {
     includeBuild('../Common-Code') {
         dependencySubstitution {
             substitute module('com.github.Pattonville-Robotics:Common-Code') with project(':library')
