Update to 4.0, add option to use local Common-Code in settings.gradle file

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,9 @@
 include ':TeamCode'
+
+if (false) {
+    includeBuild('../Common-Code') {
+        dependencySubstitution {
+            substitute module('com.github.Pattonville-Robotics:Common-Code') with project(':library')
+        }
+    }
+}
