--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -57,17 +57,17 @@ android {
 
 dependencies {
     //Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //FTC libraries
-    implementation "com.github.modular-ftc:robotcontroller-repackaged:$ftc_version.4-lite"
-    implementation "com.github.modular-ftc:robotcore-repackaged:$ftc_version.5-lite"
+    implementation "com.github.modular-ftc:robotcontroller-repackaged:$ftc_version.0-lite"
+    implementation "com.github.modular-ftc:robotcore-repackaged:$ftc_version.0-lite"
     implementation "com.github.modular-ftc:ftc-common-repackaged:$ftc_version.0-lite"
 
     implementation "org.first.ftc:hardware:$ftc_version"
 
     //The Pattonville Robotics shared libraries are included by default. Remove the following line to stop using them.
-    implementation "com.github.Pattonville-Robotics:Common-Code:ce72e05"
+    implementation "com.github.Pattonville-Robotics:Common-Code:3992c9f"
 
     implementation 'org.apache.commons:commons-math3:3.6.1'
 }
