--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -67,7 +67,8 @@ dependencies {
     implementation "org.first.ftc:hardware:$ftc_version"
 
     //The Pattonville Robotics shared libraries are included by default. Remove the following line to stop using them.
-    implementation "com.github.Pattonville-Robotics:Common-Code:3.6.1"
+//    implementation "com.github.Pattonville-Robotics:Common-Code:3.6.1"
+    implementation "com.github.Pattonville-Robotics:Common-Code:a91da37ecf"
 
     implementation 'org.apache.commons:commons-math3:3.6.1'
 }
